# parse_settings

./: .gitignore  CMakeLists.txt  Makefile  README.md
linters/: .clang-format
scripts/: benchmark.sh  build-perf.sh  run_tests.sh
src/: CMakeLists.txt
src/include/: macro.h
src/libs/: CMakeLists.txt
src/libs/stack/: CMakeLists.txt  stack.c
src/libs/stack/include/: stack.h
src/libs/tree_parser/: CMakeLists.txt  parser.c  stack_parser.c
src/libs/tree_parser/include/: parsers_common.h  stack_parser.h
src/parser/: CMakeLists.txt  main.c
src/parser/test_data/: data_gen.py  test.conf  test_1.conf  test_2.conf
